@@ -5,6 +5,10 @@
 
 2002-07-01  Peter Stephenson  <pws@csr.com>
 
+	* 17390: Src/Zle/zle_params.c, Src/Zle/zle_refresh.c,
+	Doc/Zsh/zle.yo: $PREDISPLAY and $POSTDISPLAY are used to
+	add text before and after the editable chunk of the zle buffer.
+
 	* 17384: Src/Zle/zle_main.c, Src/Zle/iwidgets.list,
 	Doc/Zsh/zle.yo: new `recursive-edit' widget allows a user-defined
 	widget to pass control back to zle as a subcommand.
